Jeg har givet tekst mere padding + centreret tekst også. Knappen har fået en border-radius på 5 px. Skift bg på iPhone Covers div.

--- a/css/mikkel_styles.css
+++ b/css/mikkel_styles.css
@@ -98,7 +98,6 @@ img {
 }
 
 .image-small,p{
-    font-size: 20px;
     font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -217,6 +216,7 @@ img {
     font-family: "Josefin Sans";
     font-size: 20px;
     font-weight: bold;
+    cursor: pointer;
 
 }
 
@@ -228,11 +228,13 @@ img {
     font-family: "Josefin Sans";
     font-size: 18px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .password {
     font-size: 18px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .password2 {
@@ -246,6 +248,11 @@ img {
 .tekst20 {
     font-weight: bold;
     margin-top: 60px;
+    font-size: 25px;
+}
+
+.tekst21 {
+    font-size: 20px;
 }
 
 
@@ -345,3 +352,4 @@ a{
 
     }
 }
+
